# gazebo_sensor_collection

./: CMakeLists.txt  README.md  package.xml
launch/: simple_camera.launch  simple_imu.launch
scripts/: spawn_model_simple_imu.py
urdf/IMUs/: simple_imu.xacro
urdf/cameras/: simple_camera.xacro
