<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sensor_collection</name>
  <version>0.1.0</version>
  <description>ROS package for a collection of sensor definitions</description>
  <maintainer email="l.m.guttormsen@hotmail.com">Lasse</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Add any additional dependencies here -->

  <export>
  </export>
</package>
